# model-template4

./: Makefile  README.md  deploy22.yaml  deploy33.yaml  model.keras  pyproject.toml
app6python/: Dockerfile  environment.yml  pyproject.toml
app6python/model/: MakeFile
app6python/model/carry/: savedmodel.mdl
app6python/model/data/: lens2.csv
app6python/model/data/test/: lens2.csv  model3.pkl
app6python/model/data/test/0/6dbccf89f57d4f7380de25ead0f37f8f/artifacts/: feature_importance_gain.json  feature_importance_split.json
app6python/model/data/test/0/6dbccf89f57d4f7380de25ead0f37f8f/artifacts/model/: MLmodel  python_env.yaml  requirements.txt
app6python/model/data/test/0/e7cc145d437d4ac79831faa9dfce88e4/artifacts/: feature_importance_gain.json  feature_importance_split.json
app6python/model/data/test/0/e7cc145d437d4ac79831faa9dfce88e4/artifacts/model/: MLmodel  conda.yaml  model.lgb
app6python/model/src/serving/: main2.py  serve.py
app6python/model/src/serving/static/: serve.py
app6python/model/src/serving/templates/: index.html
app6python/model/src/training/: train.py
app7python/: Dockerfile  model.pkl  pyproject.toml  terraform.tfstate  terraform.tfstate.backup
app7python/data/: data_path.txt
app7python/model/: MakeFile  lenspowermodel.lgb
app7python/model/data/: lens.csv  lens2.csv
app7python/model/src/serving/: serve.py
app7python/model/src/serving/templates/: index.html
app7python/model/src/training/: model.keras  train.py
app7python/model/src/training/data/: testing_set.csv  training_set.csv
app7python/model/src/training/training_1/: cp.ckpt.data-00000-of-00001  cp.ckpt.index
data/: source_file.txt  testing_set.csv  training_set.csv
infra/: index.ts  (+4 more)
(+1 files in other folders)
