[tool.poetry]
name = "app7python"
version = "0.1.0"
description = ""
authors = ["shabieh2 <shabieh2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
numba="0.56"
mlflow="2.1.1"
scikit-learn = "1.2.1"
scipy = "1.10.0"
lightgbm = "3.3.5"
boto3 = "1.24.59"
fastapi = "0.89.1"
uvicorn = "0.20.0"
tensorflow="2.11.0"
keras="2.11.0"
flask= "2.2.2"
gunicorn="20.1.0"

[tool.poetry.scripts]
train = "app7python.model.src.training.train:main"
serve = "app7python.model.src.serving.serve:app"  



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
