[tool.poetry]
name = "model"
version = "0.1.0"
description = ""
authors = ["shabieh2 <shabieh2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
flask= "2.2.2"
gunicorn="20.1.0"


[tool.poetry.scripts]
train = "model.src.training.train:main"
serve = "model.src.serving.serve:main"  



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
